17 March 2021: Wouter
	- Fix #441: Minimal NSEC range not accepted for top level domains.

11 March 2021: Wouter
	- Fix parse of LOC RR type for decimetres.

5 March 2021: Wouter
	- Workaround for #439: prevent loops in the reuse rbtree.
	- Debug output for #411 and #439: printout internal error and details.

4 March 2021: Wouter
	- iana portlist update.
	- Fix spurious errors about "Could not generate request: out of
	  memory".  The mesh detect cycle routine no longer wrongly stops
	  the check when the calling mesh state is unique.

26 February 2021: George
	- Fix for #367: rc_ports don't have ub_sock; skip cleaning up.

26 February 2021: Wouter
	- Fix: Resolve interface names on control-interface too.

25 February 2021: Wouter
	- Merge PR #367 : DNSTAP log local address.  With code from PR #365
	  and fixes #368 : dnstap does not log the DNS message ID for
	  FORWARDER_QUERY.
	- Fix to allow rpz with wildcard that applies to all TLDs at once.

24 February 2021: George
	- Fix #384: (1) A minor request to improve the log (2) A minor bug in one
	  log message.
	- ipsecmod: Better logging for detecting a cycle when attaching the
	  A/AAAA subquery.

24 February 2021: Wouter
	- On startup of unbound it checks if rlimits on memory size look
	  sufficient for the configured cache size, and logs warning if not.
	- Fix function documentation.
	- Fix unit test for added ulimit checks.
	- spelling fix in header.

23 February 2021: Wouter
	- Fix for zonemd, that domain-insecure zones work without dnssec.
	- Fix for zonemd, do not reject insecure result from trust anchor
	  validation step in dnssec chain of trust.

22 February 2021: Wouter
	- Fix #431: Squelch permission denied errors for tcp connect
	  and udp connect from the logs, unless at high verbosity.
	- Fix for zonemd, that nxdomain for the chain of trust is allowed
	  for island zones, it is treated as an insecure zone for verification.

18 February 2021: Wouter